tests/spec/non_conformant/errors/import/file/mixin/control_if/outside.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/import/file/mixin/control-if/outside.hrx"

// Ignoring "test", error tests are not supported yet.
